[package]
name = "grim-patron-bot"
version = "0.1.0"
authors = ["Maxim Grishkin <grishkin.max@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
serenity = "0.10.8"
